CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_educ_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_educ_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_educ_hist</externalName>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>Ownership code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfd_educ__c</fullName>
        <description>cde_source_vrfd_educ</description>
        <externalDeveloperName>cde_source_vrfd_educ</externalDeveloperName>
        <label>How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_stftry_degree__c</fullName>
        <description>cde_stftry_degree</description>
        <externalDeveloperName>cde_stftry_degree</externalDeveloperName>
        <label>Degree Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_hours__c</fullName>
        <description>cde_type_hours</description>
        <externalDeveloperName>cde_type_hours</externalDeveloperName>
        <label>Hour Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_school__c</fullName>
        <description>cde_type_school</description>
        <externalDeveloperName>cde_type_school</externalDeveloperName>
        <label>School Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verification Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_educ__c</fullName>
        <description>cde_vrfyd_educ</description>
        <externalDeveloperName>cde_vrfyd_educ</externalDeveloperName>
        <label>Verified Education Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_compltn_exptd_educ__c</fullName>
        <description>dte_compltn_exptd_educ</description>
        <externalDeveloperName>dte_compltn_exptd_educ</externalDeveloperName>
        <label>Expected Education Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_educ_indiv__c</fullName>
        <description>idn_educ_indiv</description>
        <externalDeveloperName>idn_educ_indiv</externalDeveloperName>
        <label>Education ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_EDUC__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_EDUC__c</referenceTo>
        <relationshipLabel>Education Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_educ_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_educ_indiv_hist__c</fullName>
        <description>idn_educ_indiv_hist</description>
        <externalDeveloperName>idn_educ_indiv_hist</externalDeveloperName>
        <label>Education ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_educ_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_school__c</fullName>
        <description>nam_school</description>
        <externalDeveloperName>nam_school</externalDeveloperName>
        <label>School Name</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_credits__c</fullName>
        <description>nbr_credits</description>
        <externalDeveloperName>nbr_credits</externalDeveloperName>
        <label>Credit Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_educ_indiv__c</fullName>
        <description>nbr_seq_educ_indiv</description>
        <externalDeveloperName>nbr_seq_educ_indiv</externalDeveloperName>
        <label>Education Individual Sequence Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Education History</label>
    <pluralLabel>Education History</pluralLabel>
</CustomObject>